Removed front as a submodule and added it as a regular folder

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=tesgart
-DB_PASSWORD=nagayna
+DB_NAME=db_name
+DB_PASSWORD=db_password
 DB_PORT=5432
-EMAIL=mnurinissa@gmail.com
-PASSWORD=eghx yfsp dxta hsed
+EMAIL=your_email@gmail.com
+PASSWORD=your_mail_password
 ADMIN_USER=admin
-ADMIN_PASSWORD=secret
+ADMIN_PASSWORD=admin123
